FactCalc/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\FactCalc
-d
H:\FactCalc\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\FactCalc\FactCalc.java
<---- end of javadoc command ---->
Loading source file H:\FactCalc\FactCalc.java...
H:\FactCalc\FactCalc.java:10: error: <identifier> expected
    public int(int n)
              ^
H:\FactCalc\FactCalc.java:10: error: ';' expected
    public int(int n)
                     ^
2 errors
